--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -23,6 +23,12 @@
           padding: 1px 6px
         .time
           padding: 2px 0
+      .views-field-title
+        h3
+          //font-family: $open-sans
+          +x-rem(font-size, 0.95)
+
+
 
 
 /*------------------------------------------- */
@@ -60,6 +66,7 @@
       float: left
       width: 50%
       padding-left: 15px
+
 
 
 /* End Media Query Tablet */
