--- a/themes/hsk_zymphonies/templates/page.html.twig
+++ b/themes/hsk_zymphonies/templates/page.html.twig
@@ -90,12 +90,12 @@
 
   <!-- Banner -->
   {% if is_front and page.slideshow %}  
-    <div class="container slideshow">
-      <div class="row">
-        <div class="col-md-12">
+    <div class="{#container#} slideshow">
+      {#<div class="row">#}
+        <div class="{#col-md-12#}">
             {{ page.slideshow }}
         </div>
-      </div>
+      {#</div>#}
     </div>
   {% endif %}
   <!-- End Banner -->
