--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -43,16 +43,26 @@
 /*------------------------------------------- */
 +breakpoint($breakpoint-desktop-narrow)
   .path-frontpage
-    .view-header-slideshow
-      .views-row
-        .views-field-field-sl-text
-          position: absolute
-          left: 30px
-          bottom: 30px
-          background: rgba(125,125,125,0.6)
-          color: white
-          padding: 15px 20px
-          +x-rem(font-size, 1.3)
+    #block-views-block-header-slideshow-block-1
+      width: 100%
+      height: 450px
+      overflow: hidden
+      .view-header-slideshow
+        .views-row
+          max-height: 450px
+          .views-field-field-sl-text
+            position: absolute
+            bottom: 20px
+            width: 100%
+            background: none
+            a
+              background: rgba(125,125,125,0.6)
+              color: white
+              padding: 15px 20px
+              +x-rem(font-size, 1.3)
+              float: left
+
+
 
 
 
