Einbinden Bootstrap-Grid, Styling Newsblock Startseite

--- a/themes/hsk_zymphonies/sass/_base.sass
+++ b/themes/hsk_zymphonies/sass/_base.sass
@@ -68,6 +68,8 @@ ul.tabs
 /*------------------------------------------- */
 /*------------------------------------------- */
 +breakpoint($breakpoint-desktop-narrow)
+  .tabs.primary
+    +make-md-column(12)
 
 
 /* End Media Query Tablet */
