--- a/themes/hsk_zymphonies/sass/includes/_fonts.sass
+++ b/themes/hsk_zymphonies/sass/includes/_fonts.sass
@@ -20,6 +20,10 @@ $bold: 700
 @mixin font-size-medium
   +x-rem(font-size, 1.4)
 
+@mixin small-grey-links
+  +x-rem(font-size, 0.8)
+  color: $light-grey-text
+
 
 // Font-Styles
 @mixin font-base /* Base Font definition */
