--- a/themes/hsk_zymphonies/sass/includes/_hsk-zymphonies-central.sass
+++ b/themes/hsk_zymphonies/sass/includes/_hsk-zymphonies-central.sass
@@ -1,5 +1,8 @@
 @import variables
 @import rem-mixin
+@import bootstrap-grid/variables
+@import bootstrap-grid/mixins
+@import bootstrap-grid/grid
 @import colors
 @import mixins
 @import fonts
