--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -28,6 +28,21 @@
           //font-family: $open-sans
           +x-rem(font-size, 0.95)
 
+  #block-views-block-news-block-1
+    .views-row
+      margin-bottom: 10px
+      h3
+        margin-bottom: 2px
+    .views-field-body
+      p
+        margin-bottom: 0
+    .views-field-view-node
+      a
+        +small-grey-links
+
+
+
+
 
 
 
@@ -58,14 +73,13 @@
 /*------------------------------------------- */
 +breakpoint($breakpoint-desktop-narrow)
   .path-frontpage
+    .region-content
+      +make-row()
     #block-views-block-events-list-block-1
-      float: left
-      width: 50%
+      +make-md-column(6)
 
     #block-views-block-news-block-1
-      float: left
-      width: 50%
-      padding-left: 15px
+      +make-md-column(6)
 
 
 
