--- a/themes/hsk_zymphonies/sass/_base.sass
+++ b/themes/hsk_zymphonies/sass/_base.sass
@@ -42,6 +42,20 @@ ul.tabs
 .block-place-region a.button
   display: inline-block
 
+.node__content
+  table
+    +x-rem(font-size, 1)
+    th, td
+      text-align: center
+      padding: 2px 6px
+      border: 1px solid #ccc
+      +x-rem(font-size, 1)
+      font
+        font-size: 14px!important
+    th
+      background: #eee
+
+
 /*------------------------------------------- */
 /*------------------------------------------- */
 /*----------- Tablet Portrait ----------------*/
@@ -68,8 +82,6 @@ ul.tabs
 /*------------------------------------------- */
 /*------------------------------------------- */
 +breakpoint($breakpoint-desktop-narrow)
-  .tabs.primary
-    +make-md-column(12)
 
 
 /* End Media Query Tablet */
