--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -19,10 +19,10 @@
   .view-events-list
     .views-field-title
       h3
-        +x-rem(font-size, 0.85)
+        +x-rem(font-size, 1)
     .views-field-field-ev-start-time
       color: #777
-      +x-rem(font-size, 0.8)
+      +x-rem(font-size, 0.9)
       .date
         display: inline
       .time
@@ -91,6 +91,14 @@
       .field--name-field-image
         float: left
         margin: 5px 15px 5px 0
+
+  .sidebar
+    .view-events-list
+      .views-field-title
+        h3
+          +x-rem(font-size, 0.85)
+      .views-field-field-ev-start-time
+        +x-rem(font-size, 0.8)
 
 
 
