--- a/themes/hsk_zymphonies/sass/includes/_hsk-zymphonies-central.sass
+++ b/themes/hsk_zymphonies/sass/includes/_hsk-zymphonies-central.sass
@@ -4,6 +4,9 @@
 @import bootstrap-grid/mixins
 @import bootstrap-grid/grid
 @import colors
+@import bootstrap-grid/_variables.scss
+@import bootstrap-grid/_mixins.scss
+@import bootstrap-grid/_grid.scss
 @import mixins
 @import fonts
 @import style-mixins
